--- a/inlämning1/style.css
+++ b/inlämning1/style.css
@@ -11,34 +11,31 @@ body{
     background-image: url("wallpaper.jpg");
     width: 100%;
 }
-li{
+#pictureList{
     display: grid;
-    grid-template:
-    1fr 1fr 1fr 1fr
+    grid-template-columns: repeat(4, 1fr);
+    width: 24%;
 }
-@media (max-width: 1200px)
+/* @media (max-width: 1000px)
 {
-li{
+#pictureList{
     display: grid;
-    grid-template:
-    1fr 1fr 1fr
+    grid-template-columns: repeat(3, 1fr);
 }
 }
-@media (max-width: 1000px)
+@media (max-width: 8000px)
 {
-li
+#pictureList
 {
     display: grid;
-    grid-template:
-    1fr 1fr
+    grid-template-columns: repeat(2, 1fr);
 }
 }
 @media (max-width: 600px)
 {
-li
+#pictureList
 {
     display: grid;
-    grid-template:
-    1fr
+    grid-template-columns: repeat(1, 1fr);
 }
-}
+} */
