--- a/inlämning1/style.css
+++ b/inlämning1/style.css
@@ -14,16 +14,20 @@ body{
 #pictureList{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    width: 24%;
 }
-/* @media (max-width: 1000px)
+#pictureList img{
+    width: 90%;
+    height: 90%;
+    object-fit: cover;
+}
+@media (max-width: 1200px)
 {
 #pictureList{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
 }
-@media (max-width: 8000px)
+@media (max-width: 900px)
 {
 #pictureList
 {
@@ -38,4 +42,5 @@ body{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
 }
-} */
+}
+/* Style all inside pictureList since we append everything to it */
