--- a/inlämning1/style.css
+++ b/inlämning1/style.css
@@ -26,6 +26,14 @@ body {
         utan no repeat ser man bilden 2-3 gånger under varandra när det är smalare */
 }
 
+.tags{
+    font-size: 20px;
+}
+
+.author{
+    font-size: 16px;
+}
+
 #buttonDiv{
     text-align: center;
 }
@@ -36,6 +44,7 @@ body {
 }
 #pictureList img{
     width: 90%;
+    background-size: cover;
 }
 
 @media (max-width: 1200px)
