--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -1,28 +1,18 @@
 h1
 {
-    font-size: 40px;
-    color: white;
-    background-color: black;
-    box-shadow: 5px 5px 5px red;
+    font-size: 60px;
+    color: rgb(255, 196, 196);
+}
+p
+{
+    font-size: 10px;
 }
 body
 {
     text-align: center;
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%)
 }
-.container
+ul
 {
-
+    list-style-type: none;
+    grid-template-rows: 3, 1fr;
 }
-
-/* h1
-{
-    text-align: center;
-}
-.container
-{
-    text-align: center;
-} */
