--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -10,6 +10,8 @@ p
 body
 {
     text-align: center;
+    background: #f5f5f5;
+    max-width: 900px;
 }
 #userInput
 {
@@ -44,4 +46,23 @@ ul
 {
     list-style-type: none;
     grid-template-rows: 3, 1fr;
+}
+.test{
+    position: relative;
+    background-color: white;
+}
+
+.test::before{
+	content: '';
+	position: absolute;
+    left:0;
+    right: 0;
+    bottom: 0;
+    height: 50px;
+	box-shadow: 
+    0 1px 1px rgba(0, 0, 0,20%),
+    0 9px 0 -3px rgba(255, 255, 255),
+    0 10px 0 -3px rgba(0, 0, 0,20%),
+    0 18px 0 -6px rgba(255, 255, 255),
+    0 19px 0 -6px rgba(0, 0, 0,20%);
 }
