--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -66,3 +66,11 @@ ul
     0 18px 0 -6px rgba(255, 255, 255),
     0 19px 0 -6px rgba(0, 0, 0,20%);
 }
+
+#tasks li button{
+    visibility: hidden;
+}
+
+#tasks li:hover button{
+ visibility: visible;
+}
