--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -1,20 +1,19 @@
-h1
-{
+h1 {
     font-size: 60px;
     color: rgb(255, 196, 196);
 }
-p
-{
+
+p {
     font-size: 10px;
 }
-body
-{
+
+body {
     text-align: center;
     background: #f5f5f5;
     max-width: 900px;
 }
-#userInput
-{
+
+#userInput {
     min-width: 450px;
     min-height: 50px;
     background-color: white;
@@ -22,55 +21,56 @@ body
     border: 2px solid #d1d3d4;
     /* border: none; funkar på todos exemple sida men inte här */
 }
-#tasks
-{
+
+#tasks {
     font-size: 25px;
 }
-.delete
-{
+
+.delete {
     margin-left: 10px;
     cursor: pointer;
     height: 20px;
     width: 30px;
 }
-.checkbox
-{
+
+.checkbox {
     margin-right: 10px;
     cursor: pointer;
 }
-.sorting
-{
+
+.sorting {
     cursor: pointer;
 }
-ul
-{
+
+ul {
     list-style-type: none;
     grid-template-rows: 3, 1fr;
 }
-.todoFooter{
+
+.todoFooter {
     position: relative;
     background-color: white;
 }
 
-.todoFooter::before{
-	content: '';
-	position: absolute;
-    left:0;
+.todoFooter::before {
+    content: '';
+    position: absolute;
+    left: 0;
     right: 0;
     bottom: 0;
     height: 50px;
-	box-shadow: 
-    0 1px 1px rgba(0, 0, 0,20%),
-    0 9px 0 -3px rgba(255, 255, 255),
-    0 10px 0 -3px rgba(0, 0, 0,20%),
-    0 18px 0 -6px rgba(255, 255, 255),
-    0 19px 0 -6px rgba(0, 0, 0,20%);
+    box-shadow:
+        0 1px 1px rgba(0, 0, 0, 20%),
+        0 9px 0 -3px rgba(255, 255, 255),
+        0 10px 0 -3px rgba(0, 0, 0, 20%),
+        0 18px 0 -6px rgba(255, 255, 255),
+        0 19px 0 -6px rgba(0, 0, 0, 20%);
 }
 
-#tasks li button{
+#tasks li button {
     visibility: hidden;
 }
 
-#tasks li:hover button{
- visibility: visible;
+#tasks li:hover button {
+    visibility: visible;
 }
