--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -65,6 +65,7 @@ ul {
         0 10px 0 -3px rgba(0, 0, 0, 20%),
         0 18px 0 -6px rgba(255, 255, 255),
         0 19px 0 -6px rgba(0, 0, 0, 20%);
+    z-index: -1;
 }
 
 #tasks li button {
@@ -73,4 +74,8 @@ ul {
 
 #tasks li:hover button {
     visibility: visible;
+}
+
+.app{
+    background-color: white;
 }
