--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -10,7 +10,6 @@ p {
 body {
     text-align: center;
     background: #f5f5f5;
-    max-width: 900px;
 }
 
 #userInput {
@@ -84,8 +83,10 @@ ul {
 }
 
 .app {
+    max-width: 500px;
     background-color: white;
     width: fit-content;
+    margin: 0 auto;
 }
 
 .itemsLeft {
