--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -93,6 +93,11 @@ ul {
     grid-area: "b";
 }
 
+.sorting li button {
+    margin-right: 10px;
+  }
+  
+
 .app {
     max-width: 500px;
     background-color: white;
@@ -149,3 +154,23 @@ ul {
 #searchPart input {
     grid-area: "b";
 }
+
+/* Tog från deras hemsida men får inte checkmark och bli i mitten/ta över rutan */
+input[type="checkbox"]:checked {
+    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.completed {
+    color: grey;
+    text-decoration: line-through;
+  }
+
+  button {
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+  }
