--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -3,7 +3,9 @@ h1 {
     font-weight: 100;
     color: rgba(175, 47, 47, 0.15);
     background-color:#f5f5f5 ;
-    margin: 0px ;
+    position: absolute;
+    width: 500px;
+    top: -10px;
 }
 
 p {
@@ -14,13 +16,15 @@ body {
     font:14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     text-align: center;
     background: #f5f5f5;
+    display:grid;
+    grid-template: "auto 1fr auto";
+    justify-items: center;
 }
 
 #userInput {
     min-width: 450px;
     min-height: 50px;
     background-color: white;
-    border-radius: 10px;
     border: 2px solid #d1d3d4;
     /* border: none; funkar på todos exemple sida men inte här */
 }
@@ -53,7 +57,7 @@ ul {
     position: relative;
     background-color: white;
     display: grid;
-    grid-template: "a b c";
+    grid-template: "a b c"/1fr auto 1fr;
     align-items: center;
     padding: 10px;
 }
@@ -103,8 +107,9 @@ ul {
 .app {
     max-width: 500px;
     background-color: white;
-    width: fit-content;
-    margin: 0 auto;
+    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%), 0 25px 50px 0 rgb(0 0 0 / 10%);
+    
+    margin-top: 200px;
 }
 
 .itemsLeft {
@@ -181,7 +186,7 @@ input[type="checkbox"]:checked {
 
 
 .completed {
-    color: grey;
+    color: #d9d9d9;
     text-decoration: line-through;
   }
 
