--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -37,7 +37,7 @@ body {
 
 .delete {
     margin-left: 10px;
-    cursor: pointer;
+    /* cursor: pointer; */
     height: 20px;
     width: 30px;
     background-color: white;
@@ -198,4 +198,8 @@ input[type="checkbox"]:checked {
     padding: 0;
     margin: 0;
     cursor: pointer;
+  }
+
+  button:hover {
+    text-decoration: underline;
   }
