--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -44,6 +44,10 @@ body {
     border: none;
 }
 
+#deleteAll:hover{
+    text-decoration: underline;
+}
+
 .checkbox {
     margin-right: 10px;
     cursor: pointer;
@@ -103,6 +107,12 @@ ul {
 
 .sorting li button {
     margin-right: 10px;
+    border: 2px solid transparent;
+  }
+  .sorting li button:hover
+  {
+    /* border: 2px solid; */
+    border-color: rgba(175, 47, 47, 0.2);
   }
   
 
@@ -198,8 +208,4 @@ input[type="checkbox"]:checked {
     padding: 0;
     margin: 0;
     cursor: pointer;
-  }
-
-  button:hover {
-    text-decoration: underline;
   }
