--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -2,7 +2,7 @@ h1 {
     font-size: 100px;
     font-weight: 100;
     color: rgba(175, 47, 47, 0.15);
-    background-color:#f5f5f5 ;
+    background-color: #f5f5f5;
     position: absolute;
     width: 500px;
     top: -10px;
@@ -13,10 +13,10 @@ p {
 }
 
 body {
-    font:14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     text-align: center;
     background: #f5f5f5;
-    display:grid;
+    display: grid;
     grid-template: "auto 1fr auto";
     justify-items: center;
 }
@@ -44,7 +44,7 @@ body {
     border: none;
 }
 
-#deleteAll:hover{
+#deleteAll:hover {
     text-decoration: underline;
 }
 
@@ -63,7 +63,7 @@ ul {
     position: relative;
     background-color: white;
     display: grid;
-    grid-template: "a b c"/1fr auto 1fr;
+    grid-template: "a b c" /1fr auto 1fr;
     align-items: center;
     padding: 10px;
 }
@@ -108,19 +108,21 @@ ul {
 .sorting li button {
     margin-right: 10px;
     border: 2px solid transparent;
-  }
-  .sorting li button:hover
-  {
+}
+
+.sorting li button:hover,
+.selected {
     /* border: 2px solid; */
-    border-color: rgba(175, 47, 47, 0.2);
-  }
-  
+    border-color: rgba(175, 47, 47, 0.2) !important;
+}
+
+
 
 .app {
     max-width: 500px;
     background-color: white;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%), 0 25px 50px 0 rgb(0 0 0 / 10%);
-    
+
     margin-top: 200px;
 }
 
@@ -200,12 +202,12 @@ input[type="checkbox"]:checked {
 .completed {
     color: #d9d9d9;
     text-decoration: line-through;
-  }
+}
 
-  button {
+button {
     border: none;
     background-color: transparent;
     padding: 0;
     margin: 0;
     cursor: pointer;
-  }
+}
