--- a/Inlämning3/style.css
+++ b/Inlämning3/style.css
@@ -143,7 +143,7 @@ ul {
     display: grid;
     grid-template: "a b c" / auto 1fr auto;
     margin: 10px;
-    margin-right: 10px;
+    margin-left: 0;
     border-bottom: 1px solid #ededed;
 }
 
