--- a/inlämning4/style.css
+++ b/inlämning4/style.css
@@ -9,10 +9,10 @@ h1
   color: white;
 }
 
-#app
+#app, body
 {
   text-align: center;
-  background-color: grey;
+  background-color: #A9A9A9;
 }
 
 .totalSpent 
@@ -37,12 +37,13 @@ h1
     margin: 0 auto;
     width: 50%;
     margin-top: 1%;
-     background-color: red; 
+    background-color: red; 
  }
 
 #name, #amount, #date, #category
 {
   font-size: 20px;
   margin: 2px;
-   border: none; 
+  border: none;
+  outline: none;
 } 
