--- a/inlämning4/style.css
+++ b/inlämning4/style.css
@@ -33,11 +33,13 @@ h1
 
  table.expenses
  {
-    color: white;
+    color: rgb(0, 0, 0);
     margin: 0 auto;
     width: 50%;
     margin-top: 1%;
-    background-color: red; 
+    font-weight: bold;
+    font-size: 20px;
+    /* background-color: red;  */
  }
 
 #name, #amount, #date, #category
